--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:background="@color/cream"
     android:orientation="vertical"
+    android:padding="30dp"
     tools:context=".View.DetailMovieActivity">
 
     <ImageView
@@ -22,13 +23,14 @@
         android:layout_height="wrap_content"
         android:text="Movie Title"
         android:textAlignment="center"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/maroon"
         android:textSize="24sp"/>
     <TextView
         android:id="@+id/tv_overview"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:textSize="14sp"
         android:text="Movie Sysnopsis"/>
 </LinearLayout>
