--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
-    <color name="maroon">#b21111</color>
+    <color name="maroon">#8B0000</color>
+    <color name="cream">#FFF8DC</color>
 </resources>
