--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,26 +10,28 @@
 
     <ImageView
         android:id="@+id/moviePoster"
-        android:scaleType="centerCrop"
         android:layout_width="200dp"
         android:layout_height="300dp"
-        android:src="@color/maroon"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:scaleType="centerCrop"
+        android:src="@color/maroon" />
+
     <TextView
         android:id="@+id/tv_movieTitle"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:text="Movie Title"
         android:textAlignment="center"
         android:textColor="@color/maroon"
-        android:textSize="24sp"/>
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/tv_overview"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Movie Sysnopsis"
         android:textColor="@color/black"
-        android:textSize="14sp"
-        android:text="Movie Sysnopsis"/>
+        android:textSize="14sp" />
 </LinearLayout>
