--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
         <!-- Customize your theme here. -->
 
         <item name="colorPrimary">@color/maroon</item>
@@ -9,5 +10,7 @@
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
+
+    <style name="DetailTheme" parent="Theme.AppCompat.Light.NoActionBar"></style>
 
 </resources>
